# tok-label

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  demo.ipynb  project-config.yaml  pyproject.toml  requirements-base.txt  requirements.txt
deploy/: SAM2.yaml  discharge_timing_features.yaml  file-server.yaml  frame-extractor.yaml  gpu-test.yaml  ip-features.yaml  ls-ingress.example.yaml  ls-values.example.yaml  plasma-mask.yaml  plasma-polygon.yaml  pv.example.yaml  redis.example.yaml  secret.example.yaml  start.sh  test.yaml
file-server/: Dockerfile  README.md  example.py  main.py  test.py  util.py
frame-extractor/: Dockerfile  main.py  requirements.txt
ml-backends/: cache.db
ml-backends/discharge_timing_features/: Dockerfile  model.py  requirements.txt  test_api.py
ml-backends/ip_features/: docker-compose.yml  model.py  requirements.txt  test_api.py
ml-backends/my_ml_backend/: Dockerfile  docker-compose.yml  inner_config.py  ml-backend.yaml  model.py  prediction.py  requirements-base.txt  test_api.py  utils.py
ml-backends/plasma_mask/: .dockerignore  Dockerfile  _wsgi.py  model.py  requirements.txt
ml-backends/plasma_polygon/: docker-compose.yml  model.py  requirements.txt  test_api.py
ml-backends/segment_anything_2_image/: Dockerfile  docker-compose.yml
projects/: demo.yaml
projects/ip-features/: dataset.py  (+1 more)
test/: test_utils.py
toklabel/: .env.example  __init__.py  _label_config_utils.py  config.py  maskutils.py  prediction.py  projectbuilder.py  toklabel.py  utils.py
(+13 files in other folders)
